<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.gachon.ttuckttak.ui.login.LoginViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_content_description"
            android:onClick="@{() ->viewmodel.goBack()}"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0361"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0159" />

        <!-- 뚝딱 로고 이미지-->
        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_logo_text"
            android:contentDescription="@string/logo_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1828" />

        <!-- 이메일 입력 에딧 텍스트  -->
        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="@string/email_autofill"
            android:background="@drawable/textbox"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:hint="@string/email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:lineHeight="20sp"
            android:paddingHorizontal="19dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_logo"
            app:layout_constraintVertical_bias="0.1138"
            app:layout_constraintWidth_percent="0.9111" />

        <!-- 비밀번호 입력 에딧 텍스트 -->
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="@string/password_autofill"
            android:background="@drawable/textbox"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:hint="@string/pw"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:lineHeight="20sp"
            android:paddingHorizontal="19dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_email"
            app:layout_constraintVertical_bias="0.0184"
            app:layout_constraintWidth_percent="0.9111" />

        <!-- 오류 메세지 텍스트-->
        <TextView
            android:id="@+id/textview_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:lineHeight="16sp"
            android:text="@string/wrong_email_or_password"
            android:textColor="@color/general_theme_red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/editText_password"
            app:layout_constraintTop_toBottomOf="@id/editText_password"
            app:layout_constraintVertical_bias="0.0237" />

        <!-- 로그인 버튼 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:onClick="@{() ->viewmodel.login(edittextEmail.getText().toString(), editTextPassword.getText().toString())}"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_error_message"
            app:layout_constraintVertical_bias="0.0593"
            app:layout_constraintWidth_percent="0.8833" />

        <!-- 비밀번호 찾기 텍스트 버튼-->
        <TextView
            android:id="@+id/text_find_id_or_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:lineHeight="20sp"
            android:onClick="@{() ->viewmodel.findPw()}"
            android:text="@string/find_id_or_pw1"
            android:textColor="@color/general_theme_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintVertical_bias="0.065" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>