<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.join.JoinPart1Activity">

    <!-- 뷰 프로그래스 바 -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/main_theme_blue"
        app:layout_constraintHeight_percent="0.0063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <!-- 회원가입 제목 텍스트-->
    <TextView
        android:id="@+id/textview_join_membership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:text="@string/join_membership"
        android:textColor="@color/general_theme_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0318" />

    <!-- 뒤로가기 레이아웃 -->
    <ImageButton
        android:id="@+id/imagebutton_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/bcak_content_description"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_join_membership" />

    <!-- 이메일 가입 설명 텍스트 -->
    <!-- TODO: 텍스트와 에딧 텍스트 위치가 조금 아쉬운 부분이 있음   -->
    <TextView
        android:id="@+id/textview_join_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:text="@string/join_email"
        android:textColor="@color/general_theme_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_join_membership"
        app:layout_constraintVertical_bias="0.2782" />

    <!-- 이메일 입력 에딧 텍스트 -->
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="@string/email_autofill"
        android:background="@drawable/selector_default_textbox"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:hint="@string/email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="19dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_join_email"
        app:layout_constraintVertical_bias="0.0163"
        app:layout_constraintWidth_percent="0.9111" />

    <!-- 오류 메세지 텍스트 -->
    <!-- FixMe: 오류 메세지 다른 모드로 뜨게 하는 작업을 잘 모르겠음  -->
    <TextView
        android:id="@+id/textview_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:textColor="@color/general_theme_red"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edittext_email"
        app:layout_constraintTop_toBottomOf="@id/edittext_email"
        app:layout_constraintVertical_bias="0.0069"
        tools:text="@string/overlap_email" />

    <!-- 인증 코드 보내기 버튼 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        style="@style/DefaultButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:text="@string/certification_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_email"
        app:layout_constraintVertical_bias="0.5379"
        app:layout_constraintWidth_percent="0.8833" />

</androidx.constraintlayout.widget.ConstraintLayout>